# transnational_company_project

./: README.md  pyproject.toml
docs/: index.html
docs/source/: conf.py  index.rst
src/company/: __main__.py
src/company/common/: __init__.py  descriptors.py  enums.py  exceptions.py  location.py  validation.py
src/company/company_structure/: companies.py
src/company/finance/: budget.py  budget_management.py  transaction.py
src/company/hr/: __init__.py  employee_factory.py  employee_manager.py  employees.py  enums.py
src/company/logistics/: cargo_manager.py  enums.py  transport.py  transport_factory.py  warehouse.py
src/company/products/: products.py
tests/: conftest.py
tests/common/: test_descriptors.py  test_location.py  test_validation.py
tests/company_structure/: test_companies.py
tests/finance/: test_budget.py  test_budget_management.py  test_transaction.py
tests/hr/: test_employee_factory.py  test_employee_manager.py  test_employees.py
tests/logistics/: test_cargo_manager.py  test_factory.py  test_transport.py  test_warehouse.py
