[project]
name = "some-name"
version = "0.0.0"
authors = [{name = "Artem Shumilov", email = "frogwithcode@gmail.com"}]
description = "some text"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__main__.py",
    "*/__init__.py",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
docs = [
    "sphinx>=7.0.0",
]