[project]
name = "Transnational_project"
version = "0.0.0"
authors = [{name = "Artem Shumilov", email = "frogwithcode@gmail.com"}]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/*/__main__.py",
    "*/*/__init__.py",
    "*/*/enums.py"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
docs = [
    "sphinx>=7.0.0",
]